--- a/starter_code/views/layout.hbs
+++ b/starter_code/views/layout.hbs
@@ -4,11 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
   <link rel="stylesheet" href="stylesheets/styles.css">
-  <title>Layout</title>
+  <title>IronBeers</title>
 </head>
 <body>
   {{> nav }}
-  {{{ body }}}
+  
+  <div class="container">
+    {{{ body }}}  
+  </div>
+
+  {{> footer }}
+  {{> scripts }}
 </body>
 </html>
